Fix resource infographic on mobile

--- a/public/_scss/components/section.scss
+++ b/public/_scss/components/section.scss
@@ -87,3 +87,7 @@
     margin-top: 20px;
   }
 }
+#resource-circle-graphic {
+  align-items: center;
+  margin-top: 20px;
+}
